# HuffmanTranscoder

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.c
src/Huffman/: Huffman.c  Huffman.h  HuffmanInternals.h
test/: CMakeLists.txt  main.c
